[project]
name = "aya"
version = "0.2.0"
description = "Collection of utilities to assist with Kismet analysis"
version = "0.2.0"
description = "Collection of utilities to assist with Kismet analysis"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "kismet_rest",
    "requests>=2.20",
]